Cleaned the code and tested it

--- a/Project/Areas/Admin/Views/Moons/All.cshtml
+++ b/Project/Areas/Admin/Views/Moons/All.cshtml
@@ -21,7 +21,7 @@
     <td scope="col">@moon.Analysis</td>
     <td scope="col">
         <a asp-area="" asp-controller="Moons" asp-action="Details" asp-route-id="@moon.Id" asp-route-information="@moon.GetInformation()" class="btn btn-primary float-right ml-3">View</a>
-        <a asp-area="" asp-controller="Moons" asp-action="Edit" asp-route-id="@moon.Id" class="btn btn-warning float-right ml-3">Eddit</a>
+        <a asp-area="" asp-controller="Moons" asp-action="Edit" asp-route-id="@moon.Id" class="btn btn-warning float-right ml-3">Edit</a>
         <a asp-area="" asp-controller="Moons" asp-action="Delete" asp-route-id="@moon.Id" class="btn btn-danger float-right ml-3">Delete</a>
     </td>
 </tr>}
