--- a/Project/Views/Planets/All.cshtml
+++ b/Project/Views/Planets/All.cshtml
@@ -46,7 +46,7 @@
 
 @if (!Model.Planets.Any())
 {
-    <h2 class="text-xl-center">No planets found by the given criteria!</h2>
+    <h2 class="text-xl-center">No planets found!</h2>
 }
 
 <partial name="_PlanetsPartial" model="@Model.Planets" />
