--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -35,8 +35,7 @@
                               </button>
                               <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                                   <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Add">Add Moon</a>
-                                  <a class="nav-link text-dark" asp-area="" asp-controller="Minerals" asp-action="Add">Add Minerals To Planet</a>
-                                  <a class="nav-link text-dark" asp-area="" asp-controller="Minerals" asp-action="AddToMoon">Add Minerals To Moon</a>
+                                  <a class="nav-link text-dark" asp-area="" asp-controller="Minerals" asp-action="Add">Add Minerals</a>
                               </div>
                             </li>
                             <li class="dropdown">
