--- a/Project/Areas/Admin/Views/Planets/All.cshtml
+++ b/Project/Areas/Admin/Views/Planets/All.cshtml
@@ -21,7 +21,7 @@
             <td scope="col">@planet.Analysis</td>
             <td scope="col">
                 <a asp-area="" asp-controller="Planets" asp-action="Details" asp-route-id="@planet.Id" asp-route-information="@planet.GetInformation()" class="btn btn-primary float-right ml-3">View</a>
-                <a asp-area="" asp-controller="Planets" asp-action="Edit" asp-route-id="@planet.Id" class="btn btn-warning float-right ml-3">Eddit</a>
+                <a asp-area="" asp-controller="Planets" asp-action="Edit" asp-route-id="@planet.Id" class="btn btn-warning float-right ml-3">Edit</a>
                 <a asp-area="" asp-controller="Planets" asp-action="Delete" asp-route-id="@planet.Id" class="btn btn-danger float-right ml-3">Delete</a>
             </td>
         </tr>
