--- a/Project/Views/Minerals/Add.cshtml
+++ b/Project/Views/Minerals/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MineralFormModel
 
 @{
-    ViewBag.Title = "Add Minerals To Planet";
+    ViewBag.Title = "Add Minerals";
 }
 
 <partial name="_MineralFormPartial" model="@Model" />
