--- a/Project/Views/Moons/Details.cshtml
+++ b/Project/Views/Moons/Details.cshtml
@@ -5,10 +5,10 @@
     <dd class="col-sm-9">@Model.Name</dd>
 
     <dt class="col-sm-3">Orbital Distance:</dt>
-    <dd class="col-sm-9">@Model.OrbitalDistance AU</dd>
+    <dd class="col-sm-9">@Model.OrbitalDistance km</dd>
 
     <dt class="col-sm-3">Orbital Period:</dt>
-    <dd class="col-sm-9">@Model.OrbitalPeriod years</dd>
+    <dd class="col-sm-9">@Model.OrbitalPeriod days</dd>
 
     <dt class="col-sm-3">Radius:</dt>
     <dd class="col-sm-9">@Model.Radius km</dd>
@@ -17,7 +17,7 @@
     <dd class="col-sm-9">@Model.AtmosphericPressure atmospheres</dd>
 
     <dt class="col-sm-3">Surface Temperature:</dt>
-    <dd class="col-sm-9">@Model.SurfaceTemperature</dd>
+    <dd class="col-sm-9">@Model.SurfaceTemperature °C</dd>
 
     <dt class="col-sm-3">Analysus:</dt>
     <dd class="col-sm-9">@Model.Analysis</dd>
