--- a/Project/Views/Planets/_PlanetFormPartial.cshtml
+++ b/Project/Views/Planets/_PlanetFormPartial.cshtml
@@ -6,37 +6,37 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
-                <input asp-for="Name" class="form-control" placeholder="Habitat 7">
+                <input asp-for="Name" class="form-control" placeholder="Earth">
                 <span asp-validation-for="Name" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="OrbitalDistance"></label>
-                <input asp-for="OrbitalDistance" class="form-control" placeholder="2.3 AU">
+                <input asp-for="OrbitalDistance" class="form-control" placeholder="1 AU">
                 <span asp-validation-for="OrbitalDistance" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="OrbitalPeriod"></label>
-                <input asp-for="OrbitalPeriod" class="form-control" placeholder="3.1 years">
+                <input asp-for="OrbitalPeriod" class="form-control" placeholder="1 years">
                 <span asp-validation-for="OrbitalPeriod" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Radius"></label>
-                <input asp-for="Radius" class="form-control" placeholder="4912 km">
+                <input asp-for="Radius" class="form-control" placeholder="6378 km">
                 <span asp-validation-for="Radius" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AtmosphericPressure"></label>
-                <input asp-for="AtmosphericPressure" class="form-control" placeholder="2.3 atmospheres">
+                <input asp-for="AtmosphericPressure" class="form-control" placeholder="1 atmospheres">
                 <span asp-validation-for="AtmosphericPressure" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SurfaceTemperature"></label>
-                <input asp-for="SurfaceTemperature" class="form-control" placeholder="17C">
+                <input asp-for="SurfaceTemperature" class="form-control" placeholder="23 °C">
                 <span asp-validation-for="SurfaceTemperature" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Analysis"></label>
-                <textarea asp-for="Analysis" rows="4" class="form-control" placeholder="The planet's atmsphere is largely argon-nitrogen."></textarea>
+                <textarea asp-for="Analysis" rows="4" class="form-control" placeholder="Earth is the third planet from the Sun and the only astronomical object known to harbor and support life."></textarea>
                 <span asp-validation-for="Analysis" class="small text-danger"></span>
             </div>
             <div class="form-group">
