--- a/Project/Views/Moons/_MoonFormPartial.cshtml
+++ b/Project/Views/Moons/_MoonFormPartial.cshtml
@@ -31,12 +31,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="SurfaceTemperature"></label>
-                <input asp-for="SurfaceTemperature" class="form-control" placeholder="-53C">
+                <input asp-for="SurfaceTemperature" class="form-control" placeholder="-53 °C">
                 <span asp-validation-for="SurfaceTemperature" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Analysis"></label>
-                <textarea asp-for="Analysis" rows="4" class="form-control" placeholder="Luna is the moon of planet Earth."></textarea>
+                <textarea asp-for="Analysis" rows="4" class="form-control" placeholder="The Moon is Earth's only natural satellite."></textarea>
                 <span asp-validation-for="Analysis" class="small text-danger"></span>
             </div>
             <div class="form-group">
