--- a/Project/Views/Planets/Details.cshtml
+++ b/Project/Views/Planets/Details.cshtml
@@ -19,7 +19,7 @@
     @if (Model.SurfaceTemperature != null)
     {
         <dt class="col-sm-3">Surface Temperature:</dt>
-        <dd class="col-sm-9">@Model.SurfaceTemperature</dd>
+        <dd class="col-sm-9">@Model.SurfaceTemperature °C</dd>
     }
 
     <dt class="col-sm-3">Analysus:</dt>
