--- a/Project/Areas/Admin/Views/Moons/All.cshtml
+++ b/Project/Areas/Admin/Views/Moons/All.cshtml
@@ -2,7 +2,7 @@
 
 @{ ViewBag.Title = "Moons Administration"; }
 
-<h1>All Planets</h1>
+<h1>All Moons</h1>
 
 <table class="table table-striped">
     <thead class="thead-dark">
